--- a/demo/settings_menu.html
+++ b/demo/settings_menu.html
@@ -32,7 +32,7 @@
     editor.session.setMode("ace/mode/html");
 	editor.commands.addCommands([{
 		name: "showSettingsMenu",
-		bindKey: {win: "Ctrl-q", mac: "Command-q"},
+		bindKey: {win: "Ctrl-q", mac: "Command-l"},
 		exec: function(editor) {
 			editor.showSettingsMenu();
 		},
