Remove soft tabs option completely

--- a/build_support/bookmarklet-snapper.html
+++ b/build_support/bookmarklet-snapper.html
@@ -110,6 +110,8 @@ inject({}, function () {
     var t = document.querySelector("textarea");
     textAce = ace.require("ace/ext/textarea-snapper").transformTextarea(t);
 
+    textAce.setOption('useSoftTabs',false)
+
 });
 
 </script>
